# haskell-programming-from-first-principles

./: .gitignore  Makefile  README.md
lhs/: algebraic_datatypes.lhs  applicative.lhs  applying_structure.lhs  basic_libraries.lhs  building_projects.lhs  composing_types.lhs  foldable.lhs  folding_lists.lhs  functor.lhs  io.lhs  lists.lhs  monad.lhs  monad_transformers.lhs  monoid_semigroup.lhs  more_functional_patterns.lhs  non-strictness.lhs  parser_combinators.lhs  reader.lhs  recursion.lhs  signaling_adversity.lhs  state.lhs  testing.lhs  traversable.lhs  typeclasses.lhs  when_things_go_wrong.lhs
notes/: algebraic_datatypes.md  all_you_need_is_lambda.md  applicative.md  applying_structure.md  basic_datatypes.md  basic_libraries.md  building_projects.md  composing_types.md  foldable.md  folding_lists.md  functor.md  hello_haskell.md  io.md  lists.md  monad.md  monad_transformers.md  monoid_semigroup.md  more_functional_patterns.md  non-strictness.md  parser_combinators.md  reader.md  recursion.md  signaling_adversity.md  state.md  strings.md  testing.md  traversable.md  typeclasses.lhs  typeclasses.md  types.md  when_things_go_wrong.md
projs/hangman/: hangman.cabal
projs/hangman/src/: Main.hs
projs/morse/: morse.cabal
projs/morse/src/: Main.hs  Morse.hs
projs/shawty/: shawty.cabal
projs/shawty/app/: Main.hs
projs/test/: Addition.hs  addition.cabal
